--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     data-sap-ui-libs='sap.m'></script>
   <script>
     sap.ui.getCore().attachInit(function() {
+      let h = new sap.m.HBox({  });
       let v = new sap.m.VBox({ width: "25rem" });
       let sf = new sap.m.SearchField();
       v.addItem(sf);
       let l = new sap.m.List();
       v.addItem(l);
+      h.addItem(v);
 
-      v.placeAt("ui5-root");
+      let rg = new sap.m.RadioButtonGroup();
+      let std = new sap.m.RadioButton({ text: "Normal binding" });
+      rg.addItem(std);
+      let wrk = new sap.m.RadioButton({ text: "Web worker" });
+      rg.addItem(wrk);
+      h.addItem(rg);
+
+      h.placeAt("ui5-root");
 
       let mainModel = new sap.ui.model.json.JSONModel("data.json");
     });
