--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       let rg = new sap.m.RadioButtonGroup();
       let std = new sap.m.RadioButton({ text: "Normal binding" });
-      rg.addItem(std);
+      rg.addButton(std);
       let wrk = new sap.m.RadioButton({ text: "Web worker" });
-      rg.addItem(wrk);
+      rg.addButton(wrk);
       h.addItem(rg);
 
       h.placeAt("ui5-root");
