--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     var worker;
 
     sap.ui.getCore().attachInit(function() {
-      let h = new sap.m.HBox({  });
+      let rg = new sap.m.RadioButtonGroup();
+      let std = new sap.m.RadioButton({ id: "std", text: "Normal binding" });
+      rg.addButton(std);
+      let wrk = new sap.m.RadioButton({ id: "wrk", text: "Web worker" });
+      rg.addButton(wrk);
+      v.addItem(rg);
       let v = new sap.m.VBox({ width: "25rem" });
       let sf = new sap.m.SearchField();
       v.addItem(sf);
@@ -21,14 +26,6 @@
       v.addItem(bi);
       let l = new sap.m.List();
       v.addItem(l);
-      h.addItem(v);
-
-      let rg = new sap.m.RadioButtonGroup();
-      let std = new sap.m.RadioButton({ id: "std", text: "Normal binding" });
-      rg.addButton(std);
-      let wrk = new sap.m.RadioButton({ id: "wrk", text: "Web worker" });
-      rg.addButton(wrk);
-      h.addItem(rg);
 
       h.placeAt("ui5-root");
 
@@ -47,6 +44,7 @@
 
     function setupStd(list, mainModel, searchField) {
      console.log("setting up UI5 filters");
+     searchField.mEventRegistry.liveChange = [];
      list.setModel(mainModel);
      searchField.attachLiveChange(function() {
        list.getBinding("items").filter([
@@ -75,6 +73,7 @@
         }
       )
 
+       searchField.mEventRegistry.liveChange = [];
       searchField.attachLiveChange(function() {
         let query = searchField.getValue();
         if(query.length === 0) {
