make v root component

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       let l = new sap.m.List();
       v.addItem(l);
 
-      h.placeAt("ui5-root");
+      v.placeAt("ui5-root");
 
       let mainModel = new sap.ui.model.json.JSONModel("data.json");
 
